update the reference link

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
     font-size: large;
     font-weight: 500;
     padding-left: 70px;
-    background-image: url('svgtopng/search.png');
+    background-image: url('search.svg');
     background-size: 30px 30px;
     background-repeat: no-repeat;
     background-position: 5px center;
