--- a/style.css
+++ b/style.css
@@ -1,29 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@200&family=Montserrat:wght@200&family=Mukta:wght@200;300;400;500&display=swap');
+
 *{
     margin: 0%;
 }
-.column1{
-    color: white;
-    background-color: #000;
-    float: left;
-    width: 20%;
-    height: 100%;
-    z-index: 2;
-
+.container{
+    max-width: 100%;
+    margin: 0%;
 }
-.column2{
-    color: white;
-    background-color: #0e0e0e;
-    width: 100%;   
+.column{
+    display: flex;
+    margin: 0%;
+    
 }
 #logo{
-    margin: 10px;
+    margin-left: 3%;
+    margin-top: 3%;
+}
+.left{
+    background-color: black;
+    width: 20%;
+    margin: 0%;
+}
+.right{
+    background-color: #0e0e0e;
+    width: 100%;
 }
 .left-btn{
     background-color: transparent; 
     display: flex;
     align-items: center;
-    height: 100% ;
+    /* height: 100% ; */
     padding: 10px;
     border: 0px ;
     font-family: 'Mukta', sans-serif;
@@ -32,33 +38,123 @@
     color: white;
     border-radius: 10px;
     margin: 2%;
-    width: 250px;
-    text-align: left;
+    width: 80%;
+    text-align: left; 
 }
 .left-btn:hover{
     background-color: #282828;
 
 }
-.dow-btn{
-    background-color: transparent; 
-    border: 0px ;
-    display: flex;
-    align-items: center;
-    font-family: 'Mukta', sans-serif;
-    font-size: large;
+.install{
+    font-size: 18px;
+    padding-left: 40px;
     font-weight: 500;
-    padding: 10px;
+    margin-top: -35px;
     color: white;
-    border-radius: 10px;
-    margin: 2%;
-    width: 250px;
-    text-align: left;
+    font-family: 'Mukta', sans-serif;
 
 }
-.dow-btn:hover{
-    background-color: #282828;}
+.row1{
+    display: flex;
+}
+.row2{
+    display: flex;
+}
+.col11{
+    background-color: #8d67ab;
+    width: 45%;
+    /* height: 60%; */
+    font-size: 350%;
+    padding-left: 15px;
+    padding-top: 2px;
+    
+    font-weight: 500;
+    color: white;
+    font-family: 'Mukta', sans-serif;
+    margin-right: 1%;
+    margin-left: 1%;
+    border-radius: 15px;
+}
+.col12{
+    background-color: #ba5d07;
+    width: 45%;
+    /* height: 60%; */
+    font-size: 350%;
+    padding-left: 15px;
+    padding-top: 2px;
+    font-weight: 500;
+    color: white;
+    font-family: 'Mukta', sans-serif;
+    margin-right: 1%;
+    border-radius: 15px;
+}
+.col3{
+background-color: #27856a;
+    width: 45%;
+    /* height: 60%; */
+    font-size: 200%;
+    padding-left: 15px;
+    padding-top: 2px;
+    
+    font-weight: 500;
+    color: white;
+    font-family: 'Mukta', sans-serif;
+    margin: 1%;
+    border-radius: 15px;
+}
+.col4{
+background-color:#1e3264;
+    width: 45%;
+    /* height: 60%; */
+    font-size: 200%;
+    padding-left: 15px;
+    padding-top: 2px;
+    
+    font-weight: 500;
+    color: white;
+    font-family: 'Mukta', sans-serif;
+    margin: 1%;
+    border-radius: 15px;
+}
+.col5{
+background-color: #8d67ab;
+    width: 45%;
+    /* height: 60%; */
+    font-size: 200%;
+    padding-left: 15px;
+    padding-top: 2px;
+    
+    font-weight: 500;
+    color: white;
+    font-family: 'Mukta', sans-serif;
+    margin: 1%;
+    border-radius: 15px;
+}
+.col6{
+background-color:  #e8115b; 
+    width: 45%;
+    /* height: 60%; */
+    font-size: 200%;
+    padding-left: 15px;
+    padding-top: 2px;
+    
+    font-weight: 500;
+    color: white;
+    font-family: 'Mukta', sans-serif;
+    margin:1%;    
+    border-radius: 15px;
+}
+.tc{
+    font-size: 170%;
+    padding-left: 2%;
+    font-weight: 500;
+    color: white;
+    font-family: 'Mukta', sans-serif;
+    margin: .01em;
+    /* margin-left: 20%; */
+}
 .search {
-    width: 400px;
+    width: 30%;
     /* margin: 10px; */
     margin-left: 10px;
     /* margin-bottom: -15%; */
@@ -75,178 +171,33 @@
     border-radius: 30px;
 
 }
-.top-btn-left{
-    border-radius: 100%;
+.nav{
+    display: flex;
+    margin: .5em;
+    padding-left: 2em;
 
-    border: 0px solid;
-    margin: 10px;
-    /* margin-top: 30px; */
-    margin-left: 3%;
-    background-color: rgb(43, 40, 40); 
 }
-.top-btn-right{
+.top-arr{
     border-radius: 100%;
-    border: 0px solid;
-    margin: 10px;
-    margin-top: 30px;
-    /* margin-left: 1%; */
-    background-color: rgb(43, 40, 40); 
-}
-/* .pop{
-    color: white;
-    background-color: #8d67ab;
-    width: 50px;
-    font-family: 'Mukta', sans-serif;
-    font-size: medium;
-} */
-.imagedown{
-    width: 25px;
-    height: auto;
-    margin: 5px;
-    margin-top: -13px;
-}
-.install{
-    font-size: 18px;
-    padding-left: 40px;
-    font-weight: 500;
-    margin-top: -35px;
-    color: white;
-    font-family: 'Mukta', sans-serif;
-
+    background-color: transparent; 
+    border: 0px ;
+    color: #282828;
+    background-color: #282828;
+    margin-right: 2%;
 }
 .downbar{
     background-color: #181818;
     
     width: 100%;
-    position: fixed;
-    display: inline-block;
+    position:sticky;
+    /* display: inline-block; */
     vertical-align: baseline; 
-    color: #fff;
-    padding: 10px 20px;
-    position: fixed;
-    left: 0px;
-    bottom: 0px;
-    margin: 0%;   
-}
-.solid-box1 {
-    width: 550px; 
-    height: 240px; 
-    background-color: #8d67ab;
-    color: #fff;
-    /* padding: 20px; Padding around the text */
-    border-radius: 20px;
-    margin-left: 22%;
-    font-size: 350%;
-    padding-left: 15px;
-    padding-top: 2px;
-    font-weight: 500;
-    color: white;
-    font-family: 'Mukta', sans-serif;
-    
-}
-.solid-box2 {
-    width: 550px;
-    height: 240px;
-    background-color: #ba5d07;
-    color: #fff;
-    /* padding: 20px; Padding around the text */
-    border-radius: 20px;
-    margin-left: 61%;
-    margin-top: -240px;
-    font-size: 350%;
-    padding-left: 15px;
-    padding-top: 2px;
-    font-weight: 500;
-    color: white;
-    font-family: 'Mukta', sans-serif;
-    
-}
-.rightlogo{
-    /* margin-top: 10%; */
-    margin-bottom: -10%;
-    margin-left: 1169.5px;
-    /* display: flex;
-    position: ; */
-}
-.podcasts{
-    width: 250px;
-    height: 200px;
-    background-color: #27856a;
-    color: #fff;
-    /* padding: 20px; Padding around the text */
-    border-radius: 20px;
-    margin-left: 22%;
-    /* margin-top:; */
-    font-size: 200%;
-    padding-left: 15px;
-    padding-top: 10px;
-    font-weight: 500;
-    color: white;
-    font-family: 'Mukta', sans-serif;
-}
-.made{
-    width: 250px; 
-    height: 200px;
-    background-color: #1e3264;
-    color: #fff;
-    /* padding: 20px; Padding around the text */
-    border-radius: 20px;
-    margin-left: 41%;
-    margin-top:-210px;
-    font-size: 200%;
-    padding-left: 15px;
-    padding-top: 10px;
-    font-weight: 500;
-    color: white;
-    font-family: 'Mukta', sans-serif;
-}
-.charts{
-    width: 250px;
-    height: 200px;
-    background-color: #8d67ab;
-    color: #fff;
-    /* padding: 20px; Padding around the text */
-    border-radius: 20px;
-    margin-left: 60%;
-    margin-top:-210px;
-    font-size: 200%;
-    padding-left: 15px;
-    padding-top: 10px;
-    font-weight: 500;
-    color: white;
-    font-family: 'Mukta', sans-serif;
-}
-.new{
-    
-    width: 250px; 
-    height: 200px; 
-    background-color: #e8115b; 
     color: #fff; 
-    /* padding: 20px; Padding around the text */
-    border-radius: 20px; 
-    margin-left: 79%;
-    margin-top:-210px;
-    font-size: 200%;
-    padding-left: 15px;
-    padding-top: 10px;
-    font-weight: 500;
-    color: white;
-    font-family: 'Mukta', sans-serif;
-}
-.name{
-    font-size: x-large;
-    padding-left: 30px;
-    font-weight: 500;
-    color: white;
-    font-family: 'Mukta', sans-serif;
-    /* margin: 5px; */
-    margin-left: 20%;
-
-}
-.content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /* padding: 10px 20px; */
+    /* position: fixed; */
+    left: 0%;
+    bottom: 0%;
+    margin: 0%;    
 }
 .bar{
     display: flex;
@@ -259,6 +210,7 @@
     font-weight: 500;
     color: white;
     font-family: 'Mukta', sans-serif;
+    /* margin-bottom: 0%; */
 }
 .num{
     margin-left: 5px;
@@ -266,31 +218,32 @@
 }
 .downimage{
     display: flex;
-    margin-top: -70px;
-    width: 220px;
-    height: auto;
-    margin-left: 10px;
-    margin-bottom: 10px;
+    
+    margin-top: -3.8%;
+    width: 12%;
+    /* height: auto;  */
+    /* margin-left: 10px;
+    margin-bottom: 5%;  */
+    margin-left: 1.5em;
+    padding-bottom: 1.5em;
 
 }
-.move{
-    margin-left: 5px;
-    margin-right: 5px;
+.content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.line{
-    /* display: flex; */
-    /* margin-top: -6%;
-    width: 100%; */
-    margin-left: 0%;
-    height: 0px;
-    width: 100%;
-    position: fixed;
-    display: inline-block;
-    vertical-align: baseline;
-    color: #fff;
-    /* padding: 10px 20px; Padding around the content */
-    position: fixed; 
-     left: 0px; 
-  bottom: 103px;
-    margin: 0%;   
+.move{
+    margin: 0;
+}
+.imagedown{
+    width: 25px;
+    height: auto;
+    margin: 5px;
+    margin-top: -13px;
+}
+.imgright{
+    padding-right: 1em;
+    padding-top: 6em;
+    z-index: 100;
 }
